@startuml
class AudioData {
    - OnEnable() : void
    - BuildCache() : void
    + GetAudioGroup(groupName:string) : AudioGroup
    + GetRandomClip(groupName:string) : AudioClip
}
class AudioGroup {
    + groupName : string
    + volume : float = 1f
    + minPitch : float = 0.9f
    + maxPitch : float = 1.1f
    + spatialBlend : float
    + loop : bool
}
class "List`1"<T> {
}
class "Dictionary`2"<T1,T2> {
}
ScriptableObject <|-- AudioData
AudioData o-> "musicGroups<AudioGroup>" "List`1"
AudioData o-> "sfxGroups<AudioGroup>" "List`1"
AudioData --> "_groupCache<string,AudioGroup>" "Dictionary`2"
AudioData +-- AudioGroup
AudioGroup o-> "clips<AudioClip>" "List`1"
AudioGroup --> "mixerGroup" AudioMixerGroup
@enduml
